Fixed dark mode

--- a/assets/css/_custom.scss
+++ b/assets/css/_custom.scss
@@ -62,13 +62,13 @@ div {
   #home_list {
     padding: 3%;
   }
-  .container {
+  .flex_container {
     display: flex;
     flex-flow: row wrap;
     justify-content: center;
     align-items: center;
     padding: 10% 0%;
-    background-color: rgba(255,255,255,0.3);
+    background-color: rgba(255,255,255,0.5);
     gap: 10%;
     .flex_item {
       max-width: 40%;
@@ -79,7 +79,7 @@ div {
   }
 }
 
-.container {
+.flex_container {
   padding: 10% 0%;
 }
 
@@ -134,7 +134,7 @@ div {
     display: none;
   }
   div {
-    .container {
+    .flex_container {
       flex-flow: row wrap;
       .flex_item {
         max-width: 100%;
@@ -275,7 +275,7 @@ $c-label-text: $c-grey;
   border: 0px;
   padding: 0px;
   margin: 0 auto;
-  background-color: $dark;
+  background-color: rgb(52, 54, 59);
   overflow: hidden;
   counter-reset: slide;
   position: absolute;
